infrastructure/kubernetes/app/oauth2-proxy-manifests/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oauth2-proxy
  namespace: auth
spec:
  parentRefs:
    - name: traefik
      namespace: default
      group: gateway.networking.k8s.io
      kind: Gateway
      sectionName: https
  hostnames:
    - oauth2-proxy.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: oauth2-proxy
          port: 80
          group: ""
          kind: Service
          weight: 1
